--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
+    "expo-app-loading": "^2.1.1",
     "expo-dev-client": "~2.2.1",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-nfc-manager": "^3.14.5",
