--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-nfc-manager": "^3.14.5",
     "react-native-paper": "^5.8.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
