--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -26,8 +28,7 @@
     "react-native-nfc-manager": "^3.14.5",
     "react-native-paper": "^5.8.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-vector-icons": "^9.2.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
