--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@expo/vector-icons": "^13.0.0",
+    "@mui/material": "^5.13.6",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "@shopify/flash-list": "1.4.0",
+    "@tanstack/react-query": "^4.29.18",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-dev-client": "~2.2.1",
@@ -27,8 +34,11 @@
     "react-native": "0.71.8",
     "react-native-nfc-manager": "^3.14.5",
     "react-native-paper": "^5.8.0",
+    "react-native-popup-menu": "^0.16.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-walkthrough-tooltip": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
