--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@mui/material": "^5.13.6",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -35,6 +36,7 @@
     "react-native-nfc-manager": "^3.14.5",
     "react-native-paper": "^5.8.0",
     "react-native-popup-menu": "^0.16.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
