--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@shopify/flash-list": "1.4.0",
     "@tanstack/react-query": "^4.29.18",
+    "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-dev-client": "~2.2.1",
@@ -31,6 +32,8 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.4.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-nfc-manager": "^3.14.5",
@@ -40,7 +43,8 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-walkthrough-tooltip": "^1.5.0"
+    "react-native-walkthrough-tooltip": "^1.5.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
