before resolving error

--- a/app.json
+++ b/app.json
@@ -5,15 +5,13 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -27,7 +25,17 @@
       "favicon": "./assets/favicon.png"
     },
     "expo": {
-      "plugins": ["react-native-nfc-manager"]
+      "plugins": [
+        "react-native-nfc-manager",
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        },
+        "expo-image-picker",
+        {
+          "photosPermission": 	"Allow $(PRODUCT_NAME) to access your photos"
+        }
+      ]
     }
   }
 }
