--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@expo/vector-icons": "^13.0.0",
-    "@mui/material": "^5.13.6",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
-    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
@@ -27,8 +28,10 @@
     "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
+    "expo-camera": "~13.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
@@ -36,12 +39,20 @@
     "firebase-functions": "^4.4.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gifted-charts": "^1.3.2",
+    "react-native-image-picker": "^5.6.1",
+    "react-native-linear-gradient": "^2.8.2",
+    "react-native-month-year-picker": "^1.9.0",
     "react-native-nfc-manager": "^3.14.5",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
+    "react-native-picker-select": "^8.1.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-tab-view": "^3.5.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-walkthrough-tooltip": "^1.5.0",
     "redis": "^4.6.7"
