--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.22.2",
-    "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
@@ -52,6 +50,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swipeable": "^0.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-walkthrough-tooltip": "^1.5.0",
