--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -33,9 +35,12 @@
         },
         "expo-image-picker",
         {
-          "photosPermission": 	"Allow $(PRODUCT_NAME) to access your photos"
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos"
         }
       ]
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
