--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/hooks": "^3.0.0",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.3",
@@ -23,37 +23,37 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@shopify/flash-list": "1.6.3",
+    "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^4.29.18",
     "axios": "^1.6.7",
     "dotenv": "^16.3.1",
-    "expo": "^50.0.7",
+    "expo": "^51.0.9",
     "expo-app-loading": "^2.1.1",
-    "expo-camera": "~14.0.5",
-    "expo-dev-client": "~3.3.8",
-    "expo-font": "~11.10.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo-camera": "~15.0.10",
+    "expo-dev-client": "~4.0.15",
+    "expo-font": "~12.0.6",
+    "expo-image-picker": "~15.0.5",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.4.0",
     "i18next": "^23.10.0",
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "popup-ui": "^1.2.2",
     "react": "18.2.0",
     "react-i18next": "^14.0.5",
-    "react-native": "0.73.4",
+    "react-native": "0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-month-year-picker": "^1.9.0",
-    "react-native-nfc-manager": "^3.14.5",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-svg": "14.1.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
