--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,7 @@ web-build/
 # macOS
 .DS_Store
 
+firebaseConfig.js
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
